zz-out/pass14_run/zz-scripts/chapter09/plot_fig02_residual_phase.err
  File "/home/jplal/MCGT/zz-scripts/chapter09/plot_fig02_residual_phase.py", line 60
    return []
    ^^^^^^
IndentationError: expected an indented block after 'if' statement on line 59
